# campeditor

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  FRIEND_README.md  INTELLIGENT_SELECTOR_SPEC.md  README.md  V2_VERIFICATION_REPORT.md  install_and_run.ps1  package_for_friend.ps1  pyproject.toml  render.yaml  rerun_job.py  selector_v2_acceptance_test.py  selector_v2_live_reindex.py  start.sh
.claude/: launch.json  settings.local.json
app/: _music_separator_worker.py  broll.py  broll_profile.py  clip_selection.py  config.py  fonts.py  frameio_source.py  jobs.py  main.py  models.py  raw_source_finder.py  reference_in_source.py  rendering.py  replicate.py  selector_helpers.py  store.py  title_generation.py  transcription.py  viral_profile.py  youtube_cookies.py
broll_intelligence/: CONTRACT.md  README.md  __init__.py  baseline.py  compare.py  config.py  demo.py  feature_vector.py  library_indexer.py  llm_ladder.py  matcher.py  pipeline.py  search.py  vibe_extractor.py  vision_ladder.py
scripts/: _test_bynara_key.py  check_providers.py  cookies_json_to_netscape.py  find_bad_quote.py  js_parse_check.js  learn_viral_profile.py  run.ps1  show_lines.ps1  start_server.ps1  verify_broll_fill.py  verify_plan2.py  verify_render.py
static/: app.js  index.html  styles.css
tests/: test_broll_pack.py  test_broll_pipeline.py  test_broll_profile.py  test_bulk_upload.py  test_clip_selection_rules.py  test_learned_broll_gate.py  test_music_replication.py  test_same_title_variations.py  test_smoke.py  test_stuck_job_watchdog.py  test_title_rules.py  test_ytdlp_cookies.py
(+10 files in other folders)
