[project]
name = "campeditor"
version = "0.1.0"
description = "Viral-shorts editor: upload landscape video, trim, auto-caption with red highlights, title overlay, color grade, render 9:16 MP4."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
    "faster-whisper>=1.0.0",
    "opencv-python-headless>=4.9.0",
    "yt-dlp>=2025.1.1",
    "audio-separator[cpu]>=0.24.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]